# hierarchical-forecasting-poc

./: .gitignore  AGENTS.md  README.md  README_kedro.md  USER_GUIDE.md  makefile  pyproject.toml
api/: main.py  pyproject.toml
api/routers/: forecast.py
api/src/hdf_api/: main.py
app/: app.py  conftest.py  pyproject.toml
app/pages/: 01_Data_Upload.py  01_Descriptive_Analysis.py  01_Overview.py  01_project_overview.py  02_Descriptive_Analysis.py  02_monthly_forecast.py  03_Monthly_Forecast.py  03_weekly_anchor.py  04_Evaluation_Report.py  04_temporal_coherence.py  05_business_assistant.py  05_evaluation_report.py  06_business_assistant.py
app/tests/: test_champion.py
app/ui/: __init__.py  components.py  navigation.py  styles.py  theme.py
app/ui/page_blocks/: __init__.py  assistant_blocks.py  coherence_blocks.py  descriptive_blocks.py  evaluation_blocks.py  monthly_blocks.py  overview_blocks.py  placeholder_blocks.py  upload_blocks.py
app/utils/: champion.py  data_loaders.py  descriptive.py  formatting.py  paths.py  uploads.py
pipelines/: README.md  pyproject.toml  requirements.txt
pipelines/conf/: logging.yml
pipelines/conf/base/: catalog.yml  parameters.yml
pipelines/conf/base/parameters/: data_ingestion.yml  evaluation.yml  feature_engineering.yml  forecast_inference.yml  model_input.yml  model_selection.yml  reconciliation.yml  train_monthly.yml  train_weekly.yml
pipelines/data/01_raw/: daily_demand.csv  exogenous_variables.csv
pipelines/docs/: demand_forecast_temporal_hierarchical_blueprint.md  kedro_functional_logic_proposal.md  kedro_multi_model_modularization_audit.md  model_explainability.md  monthly_model_input_contract.md  monthly_mvp_contract_snapshot.md  phase_0_safety_baseline_report.md  pre_phase_6_7_modularization_audit.md  recothrom_time_series_history_rag_updated.md
pipelines/docs/source/: conf.py  index.rst
pipelines/notebooks/: kedro_demo.ipynb
pipelines/scripts/: inspect_monthly_mvp_contracts.py
pipelines/src/hdf_pipelines/: __init__.py  __main__.py  pipeline_registry.py  settings.py
pipelines/src/hdf_pipelines/pipelines/data_ingestion/: nodes.py  pipeline.py
pipelines/src/hdf_pipelines/pipelines/feature_engineering_monthly/: nodes.py  pipeline.py
pipelines/src/hdf_pipelines/pipelines/feature_engineering_weekly/: nodes.py  pipeline.py
pipelines/src/hdf_pipelines/pipelines/forecast_inference/: adapters.py  nodes.py  pipeline.py
pipelines/src/hdf_pipelines/pipelines/model_input_preparation/: nodes.py  pipeline.py
pipelines/src/hdf_pipelines/pipelines/model_selection/: nodes.py  pipeline.py
pipelines/src/hdf_pipelines/pipelines/model_selection/monthly/: explainability.py  nodes.py  pipeline.py
pipelines/src/hdf_pipelines/pipelines/model_selection/prophet/: nodes.py  pipeline.py
pipelines/src/hdf_pipelines/pipelines/reconciliation/: nodes.py  pipeline.py
pipelines/src/hdf_pipelines/pipelines/train_monthly/: nodes.py  pipeline.py
pipelines/src/hdf_pipelines/pipelines/train_monthly/catboost/: nodes.py  pipeline.py
pipelines/src/hdf_pipelines/pipelines/train_monthly/prophet/: nodes.py  pipeline.py
pipelines/src/hdf_pipelines/pipelines/train_monthly/sarimax/: nodes.py  pipeline.py
pipelines/src/hdf_pipelines/pipelines/train_weekly/: nodes.py  pipeline.py
pipelines/src/hdf_pipelines/pipelines/train_weekly/catboost/: nodes.py  pipeline.py
pipelines/src/hdf_pipelines/pipelines/train_weekly/prophet/: pipeline.py
pipelines/src/hdf_pipelines/pipelines/train_weekly/sarimax/: pipeline.py
pipelines/src/hdf_pipelines/utils/: __init__.py  optuna_helpers.py
pipelines/src/hierarchical_demand_forecasting_poc/: __init__.py  __main__.py  pipeline_registry.py  settings.py
pipelines/src/hierarchical_demand_forecasting_poc/pipelines/feature_engineering_monthly/: nodes.py
pipelines/src/hierarchical_demand_forecasting_poc/pipelines/train_monthly/prophet/: pipeline.py
pipelines/tests/: test_data_ingestion_nodes.py  test_feature_engineering_monthly_nodes.py  test_forecast_inference_nodes.py  test_metrics.py  test_model_input_preparation_nodes.py  test_model_selection_explainability.py  test_model_selection_monthly_nodes.py  test_monthly_future_frames.py  test_optuna_helpers.py  test_pipeline_registry.py  test_prophet_regressor_contract.py  test_run.py  test_train_monthly_catboost_nodes.py  test_train_monthly_prophet_nodes.py  test_train_monthly_sarimax_nodes.py  test_train_monthly_shared_nodes.py
shared/: pyproject.toml
shared/src/shared/: catboost_recursive.py  forecast_assistant.py  loaders.py  metrics.py  rag.py  rolling_origin.py  schemas.py  upload_validation.py  viz.py
shared/tests/: test_forecast_assistant.py  test_rag.py  test_rolling_origin.py  test_smoke.py  test_upload_validation.py
(+22 files in other folders)
