[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hdf_app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.35",
    "plotly>=5.0",
    "pandas>=2.0",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[dependency-groups]
dev = ["ruff"]
