[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.12"
name = "hierarchical_demand_forecasting_poc"
readme = "README_kedro.md"
dynamic = ["version"]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro[jupyter]~=1.3.1",
    "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset, plotly-plotlydataset, plotly-jsondataset, matplotlib-matplotlibdataset]>=3.0",
    "kedro-viz>=6.7.0",
    "scikit-learn~=1.5.1",
    "seaborn~=0.12.1",
    "shared",
]

[project.scripts]
"hierarchical-demand-forecasting-poc" = "hierarchical_demand_forecasting_poc.__main__:main"

[project.entry-points."kedro.hooks"]

[dependency-groups]
docs = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
    "sphinx_rtd_theme==2.0.0",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx_copybutton==0.5.2",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.2.0",
    "myst-parser>=1.0,<2.1",
]
dev = [
    "pytest-cov>=3,<7",
    "pytest~=7.2",
    "ruff~=0.12.0",
]

[tool.uv.sources]
shared = { workspace = true }

[tool.setuptools.dynamic]
version = {attr = "hierarchical_demand_forecasting_poc.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "hierarchical_demand_forecasting_poc"
project_name = "hierarchical-demand-forecasting-poc"
kedro_init_version = "1.3.1"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure']"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/hierarchical_demand_forecasting_poc -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Ruff format takes care of line-too-long

[tool.kedro_telemetry]
project_id = "a2fcbe8263ce4a9a9ed9accfc4dc41fa"
