[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shared"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pandas>=2.0",
    "pyarrow",
    "numpy",
    "openai>=1.0",
    "sentence-transformers>=2.7",
    "faiss-cpu>=1.8",
    "pypdf>=4.0",
    "python-docx>=1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
